part1/1.11/manifests/ping-pong/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      nodeSelector:
        project: pingpong-log
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-pvc
      containers:
        - name: ping-pong
          image: pedrocoelhodr/pingpong-app:1.1
          volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app/data
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
