part1/1.11/manifests/ping-pong/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 2345
      targetPort: 3000
